--- a/packages/alarm_notifications.yaml
+++ b/packages/alarm_notifications.yaml
@@ -29,6 +29,16 @@ alert:
     skip_first: true  # Optional, false is the default
     notifiers:
       - mobile_app_mi_9t
+# alternative automation here
+#  trigger:
+#    - platform: state
+#      entity_id: sensor.sensor_name
+#      to: 'unavailable'
+#      for:
+#        hours: 0
+#        minutes: 15
+#        seconds: 0
+
 
 automation:
   ### Notify alarm state change
