--- a/packages/device_tacker_triggers.yaml
+++ b/packages/device_tacker_triggers.yaml
@@ -20,6 +20,9 @@ automation:
       - condition: state  # 'night' condition: from sunset until sunrise 
         entity_id: sun.sun
         state: 'below_horizon'
+      - condition: state
+        entity_id: alarm_control_panel.home_alarm
+        state: disarmed
     action:
     - service: alarm_control_panel.alarm_arm_home
       data:
