--- a/packages/xiaomi.yaml
+++ b/packages/xiaomi.yaml
@@ -34,3 +34,18 @@ automation:
       data:
         target: ["#alerts"]
         message: Xiaomi Aqara gateway is available/restored
+
+  - alias: Notify when fridge temperature goes up
+    description: Notify when fridge temperature goes up
+    trigger:
+      - platform: state
+        entity_id: sensor.temperature_158d0001f54c03
+    condition:
+      - condition: template # bathroom vs outside
+        value_template: "{{states.sensor.temperature_158d0001f54c03.state|float > 7 }}"
+    action:
+    - service: notify.slack
+      data:
+        target: ["#alerts"]
+        message: >
+          Fridge temperature above 7 degrees - currently at {{ states.sensor.temperature_158d0001f54c03.state|float|round(1) }}
