--- a/packages/zones.yaml
+++ b/packages/zones.yaml
@@ -83,42 +83,55 @@ automation:
     - entity_id: device_tracker.mi_9t
       platform: state
       from: 'home'
-      to: 'away'
     condition:
       - condition: and
         conditions:
         - condition: time
+          after: '07:00:00'
+          before: '08:00:00'
           weekday:
             - mon
             - tue
             - wed
             - thu
             - fri
-        - condition: time
-          after: '07:00:00'
-          before: '08:00:00'
+        - condition: state
+          entity_id: vacuum.rockrobo
+          state: 'docked'
     action:
-    - service: vacuum.send_command
-      data:
-        entity_id: vacuum.rockrobo
-        command: start
-
-  # Start robot vacuum when Dave leave the house in the morning - debug testing
-  - alias: Dave left the house in the morning - start vacuum - debug testing
-    description: Dave left the house in the morning - start vacuum - debug testing
-    trigger:
-    - entity_id: device_tracker.mi_9t
-      platform: state
-      from: 'home'
-      to: 'away'
-    action:
-    - service: vacuum.send_command
-      data:
-        entity_id: vacuum.rockrobo
-        command: start
     - service: notify.slack
       data_template:
         target: ["#alerts-david"]
         message: >
-          *Testing*
-          {% if (is_state('device_tracker.mi_9t', 'away')) %}device_tracker.mi_9t = away{% endif %}
+          *Testing* Robot should start!
+          {{ trigger.from_state.object_id }}
+    - service: vacuum.start
+      data:
+        entity_id: vacuum.rockrobo
+
+  # debug testing
+  - alias: Dave left the house
+    description: Dave left the house
+    trigger:
+    - entity_id: device_tracker.mi_9t
+      platform: state
+      from: 'home'
+    action:
+    - service: notify.slack
+      data_template:
+        target: ["#alerts-david"]
+        message: >
+          *David* left the house {{ trigger.from_state.object_id }}
+  # debug testing
+  - alias: Karen left the house
+    description: Karen left the house
+    trigger:
+    - entity_id: device_tracker.nokia_6_1
+      platform: state
+      from: 'home'
+    action:
+    - service: notify.slack
+      data_template:
+        target: ["#alerts-david"]
+        message: >
+          *Karen* left the house {{ trigger.from_state.object_id }}
