--- a/packages/light_motion_timers_kitchen.yaml
+++ b/packages/light_motion_timers_kitchen.yaml
@@ -63,20 +63,20 @@ automation:
     - condition: state  # 'night' condition: from sunset until sunrise 
       entity_id: sun.sun
       state: 'below_horizon'
-    - condition: numeric_state
-      entity_id: sensor.illumination_7811dcb90d53
-      below: 200
+    #- condition: numeric_state
+    #  entity_id: sensor.illumination_7811dcb90d53
+    #  below: 200
   action:
   - service: light.turn_on
     data_template:
       entity_id: light.shelly_kitchen
       brightness: >-
         {%- if(is_state('alarm_control_panel.home_alarm','armed_home')) -%}
-          '30'
+        30
         {%- elif(is_state('media_player.plex_plex_for_kodi_kodi_add_on_localhost','playing')) -%}
-          '30'
+        30
         {%- else -%}
-          '175'
+        175
         {%- endif -%}
   - service: timer.start
     data:
