also turn of lounge tv systems when alarm armed

--- a/packages/alarm_armed_state_triggers.yaml
+++ b/packages/alarm_armed_state_triggers.yaml
@@ -1,5 +1,5 @@
 automation:
-  ### Notify alarm state change
+  ### Turn off all lights when Alarm is armed
   - alias: Turn off lights when Alarm is armed
     description: Turn off lights when Alarm is armed
     trigger:
@@ -19,3 +19,21 @@ automation:
             {{ " " }}{{ item.entity_id }}{%- if not loop.last %},{% endif -%}
           {%- endfor -%}
           {%- endfor -%}
+
+  ### Turn of Lounge TV Systems when Alarm is armed
+  - alias: Turn of Lounge TV Systems when Alarm is armed
+    description: Turn of Lounge TV Systems when Alarm is armed
+    trigger:
+    - entity_id: alarm_control_panel.home_alarm
+      platform: state
+      to: 'armed_home'
+    - entity_id: alarm_control_panel.home_alarm
+      platform: state
+      to: 'armed_away'
+    condition:
+      - condition: state  # only if it is on
+        entity_id: remote.lounge
+        state: 'on'
+    action:
+    - service: remote.turn_off
+      entity_id: remote.lounge
