--- a/packages/vacuum.yaml
+++ b/packages/vacuum.yaml
@@ -19,9 +19,9 @@ automation:
   - alias: Notify when Robot State Change
     description: Notify when Robot State Change
     trigger:
-    #- entity_id: vacuum.rockrobo
-    #  platform: state
-    #  to: 'cleaning'
+    - entity_id: vacuum.rockrobo
+      platform: state
+      to: 'cleaning'
     - entity_id: vacuum.rockrobo
       platform: state
       to: 'paused'
@@ -49,7 +49,7 @@ automation:
     trigger:
     - entity_id: sensor.vacuum_error_code
       platform: state
-      from: '0'
+      from: 0
     condition: []
     action:
     - service: notify.slack
