starting new additions for automation

--- a/packages/light_motion_timers_kitchen.yaml
+++ b/packages/light_motion_timers_kitchen.yaml
@@ -1,3 +1,7 @@
+input_boolean:
+  kitchenwork:
+    name: Kitchen Work
+
 timer:
   # When calling the start service on a timer that is already running, it resets 
   # the duration it will need to finish and restart the timer without triggering 
@@ -7,6 +11,8 @@ timer:
   # restarted event.
   kitchenlight:
     duration: '00:15:00'
+  kitchenwork:
+    duration: '01:00:00'
 
 automation:
 ### Kitchen Lights
@@ -21,31 +27,6 @@ automation:
     service: light.turn_off
     data:
       entity_id: light.shelly_kitch  jmmmmmmmmkjmjmken
-
-### Kitchen Lights when Alarm armed_home
-# Motion = Turn on
-#- alias: Turn on Kitchen lights when there is movement
-#  trigger:
-#  - platform: state
-#    entity_id: binary_sensor.kitchen_pir
-#    to: 'on'
-#  condition:
-#    condition: and
-#    conditions:
-#    - condition: state  # 'night' condition: from sunset until sunrise 
-#      entity_id: sun.sun
-#      state: 'below_horizon'
-#    - condition: state  # 'night' condition: from sunset until sunrise 
-#      entity_id: alarm_control_panel.home_alarm
-#      state: 'armed_home'
-#  action:
-#  - service: light.turn_on
-#    data:
-#      entity_id: light.shelly_kitchen
-#      brightness: '30'
-#  - service: timer.start
-#    data:
-#      entity_id: timer.kitchenlight
 
 ### Turn on Kitchen Lights when movement
 # Motion = Turn on
@@ -71,7 +52,9 @@ automation:
     data_template:
       entity_id: light.shelly_kitchen
       brightness: >-
-        {%- if(is_state('alarm_control_panel.home_alarm','armed_home')) -%}
+        {%- if(is_state('input_boolean.kitchenwork','on')) -%}
+        185
+        {%- elif(is_state('alarm_control_panel.home_alarm','armed_home')) -%}
         30
         {%- elif(is_state('media_player.plex_plex_for_kodi_kodi_add_on_localhost','playing')) -%}
         30
