add telegram bot notification

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -59,3 +59,9 @@ alexa:
       include_domains:
         - switch
         - light
+
+telegram_bot:
+  - platform: broadcast
+    api_key: !secret telegram_bot_key
+    allowed_chat_ids:
+      - "-461988039" # CoCT Area 6 loadshedding notifications
