--- a/packages/light_triggers_plex.yaml
+++ b/packages/light_triggers_plex.yaml
@@ -12,9 +12,9 @@ automation:
     - condition: state  # 'night' condition: from sunset until sunrise 
       entity_id: sun.sun
       state: 'below_horizon'
-    - condition: numeric_state
-      entity_id: sensor.illumination_7811dcb90d53
-      below: 200
+    #- condition: numeric_state
+    #  entity_id: sensor.illumination_7811dcb90d53
+    #  below: 200
   action:
   - service: timer.finish
     data:
